# redpanda

./: .bazelrc  .clang-tidy  .gitignore  .gitmodules  BUILD  CMakeLists.txt  CMakePresets.json  ClangBuildAnalyzer.ini  Dockerfile  MODULE.bazel  README.md  analyzer.txt  audit.ref.txt  build-meson.sh  build.sh  cert_test.sh  certs.sh  dirs.txt  install-dependencies.sh  meson.build  meson_options.txt  mtls_play.diff  notes  requirements.txt  results.txt  test_cert.py  vcpkg-configuration.json  vcpkg.json
src/go/kreq-gen/: CMakeLists.txt  build.sh
src/v/: BUILD  CMakeLists.txt  git-version.py  meson.build  version.h.in
src/v/archival/: BUILD  meson.build  ntp_archiver_service.cc  retention_calculator.cc  segment_reupload.cc  types.h
src/v/base/: BUILD
src/v/bytes/: BUILD  CMakeLists.txt  bytes.h  iobuf_parser.h  meson.build
src/v/cloud_roles/: BUILD  CMakeLists.txt  apply_aws_credentials.cc  meson.build  signature.cc
src/v/cloud_storage/: BUILD  anomalies_detector.h  cache_probe.cc  cache_service.cc  cache_service.h  meson.build  partition_manifest.cc  partition_recovery_manager.h  recovery_request.cc  recovery_request.h  remote_partition.cc  remote_segment.cc  topic_recovery_service.cc  topic_recovery_service.h
src/v/cloud_storage_clients/: BUILD  CMakeLists.txt  meson.build
src/v/cluster/: BUILD  CMakeLists.txt  archival_metadata_stm.cc  bootstrap_backend.cc  cluster_utils.cc  commands.h  controller.cc  controller.h  controller.json  controller_backend.cc  controller_probe.cc  drain_manager.cc  drain_manager.h  ephemeral_credential_frontend.cc  feature_manager.cc  features.h  fwd.h  health_monitor_backend.cc  health_monitor_backend.h  health_monitor_frontend.cc  health_monitor_frontend.h  health_monitor_types.cc  health_monitor_types.h  id_allocator_frontend.cc  leader_router.h  members_backend.cc  members_frontend.cc  members_frontend.h  members_manager.cc  members_manager.h  members_table.cc  members_table.h  meson.build  metadata_cache.cc  metadata_cache.h  partition.cc  partition.h  partition_manager.cc  partition_manager.h  partition_probe.cc  (+10 more)
src/v/compat/: CMakeLists.txt  begin_tx_compat.h  begin_tx_generator.h  check.h  cluster_json.h  compat_test.cc  generator.h  init_tm_tx_compat.h  init_tm_tx_generator.h  json.h  json_helpers.h  metadata_dissemination_compat.h  model_json.h  prepare_tx_generator.h  raft_compat.cc  raft_compat.h  run.cc  run.h  try_abort_compat.h  try_abort_generator.h
src/v/compression/: BUILD  CMakeLists.txt  meson.build
src/v/config/: BUILD  CMakeLists.txt  configuration.cc  configuration.h  convert.h  meson.build  property.h  rjson_serialization.cc  rjson_serialization.h  tls_config.h  types.h
src/v/container/: BUILD  CMakeLists.txt
src/v/coproc/: meson.build  reconciliation_backend.cc
src/v/crypto/: BUILD  CMakeLists.txt  digest.cc
src/v/features/: BUILD  feature_table.cc  feature_table_snapshot.h  meson.build
src/v/finjector/: BUILD  meson.build
src/v/hashing/: BUILD  CMakeLists.txt  crc32.h  meson.build
src/v/http/: BUILD  logger.cc  meson.build
src/v/iceberg/: CMakeLists.txt  manifest.h  manifest_avro.cc  partition.h  schema.h  schema_json.cc
src/v/io/: BUILD
src/v/json/: BUILD  CMakeLists.txt  json.cc  json.h  meson.build
src/v/kafka/: BUILD  CMakeLists.txt  group_probe.h  meson.build
src/v/metrics/: BUILD
src/v/migrations/: BUILD
src/v/model/: BUILD  CMakeLists.txt  adl_serde.cc  adl_serde.h  limits.h  meson.build  metadata.h  model.cc  namespace.h
src/v/net/: BUILD  CMakeLists.txt  connection.h  meson.build  server.cc
src/v/pandaproxy/: BUILD  auth_utils.h  error.cc  error.h  meson.build  probe.cc  probe.h  reply.h  server.cc  server.h
src/v/raft/: BUILD  CMakeLists.txt  consensus.cc  consensus.h  consensus_client_protocol.h  fwd.h  group_configuration.cc  group_configuration.h  group_manager.cc  group_manager.h  heartbeat_manager.cc  meson.build  persisted_stm.cc  probe.cc  raftgen.json  recovery_stm.cc  replicate_entries_stm.cc  rpc_client_protocol.cc  rpc_client_protocol.h  service.h  types.cc  types.h
src/v/random/: BUILD  CMakeLists.txt  generators.cc  meson.build
src/v/redpanda/: BUILD  CMakeLists.txt  admin_server.cc  admin_server.h  application.cc  application.h  cluster_config_schema_util.cc  drain_manager.cc  drain_manager.h  json2code.bzl  meson.build  multi_redpanda_test.cc
src/v/reflection/: BUILD  CMakeLists.txt  meson.build
src/v/resource_mgmt/: BUILD  CMakeLists.txt  meson.build  storage.cc  storage.h
src/v/rp_util/: main.cc  meson.build
src/v/rpc/: BUILD  CMakeLists.txt  compiler.bzl  meson.build  parse_utils.h  service.h  simple_protocol.cc  transport.h  types.cc  types.h
src/v/s3/: meson.build
src/v/security/: BUILD  CMakeLists.txt  config.h  config_bsl.cc  gssapi_authenticator.cc  gssapi_principal_mapper.cc  jwt.h  license.cc  meson.build  mtls.cc  mtls.h  oauth_authenticator.cc  oauth_authenticator.h  oidc_service.cc  scram_algorithm.cc  scram_algorithm.h  scram_authenticator.cc  scram_authenticator.h  scram_credential.h
src/v/serde/: BUILD  CMakeLists.txt  envelope_for_each_field.h  meson.build  serde.h
src/v/ssx/: BUILD  CMakeLists.txt  meson.build
src/v/storage/: BUILD  CMakeLists.txt  compacted_index.h  compacted_offset_list.h  compaction_reducers.cc  compaction_reducers.h  config.h  disk_log_impl.cc  disk_log_impl.h  index_state.cc  index_state.h  index_state_serde_compat.h  kvstore.cc  log_manager.cc  log_manager.h  log_reader.cc  log_reader.h  meson.build  node.cc  node.h  segment.cc  segment.h  segment_index.cc  segment_utils.cc  segment_utils.h  types.h
src/v/strings/: BUILD
src/v/syschecks/: BUILD  meson.build
src/v/test_utils/: BUILD  CMakeLists.txt  archival.h  gtest_main.cc  meson.build  randoms.h  test.h  tmp_dir.h
src/v/transform/: BUILD  probe.cc
src/v/utils/: BUILD  CMakeLists.txt  base64.cc  fragmented_vector.h  hdr_hist.h  meson.build  named_type.h  retry_chain_node.cc  retry_chain_node.h  stop_signal.h  timer.cc  timer.h  to_string.h  vint.h  wait_or_start.h
src/v/v8_engine/: BUILD  meson.build
src/v/wasm/: BUILD  (+2 more)
(+359 files in other folders)
