module(
    name = "redpanda",
    repo_name = "com_github_redpanda_data_redpanda",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "xxhash", version = "0.8.2")
bazel_dep(name = "zstd", version = "1.5.6")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "abseil-cpp", version = "20240116.1")
bazel_dep(name = "crc32c", version = "1.1.0")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "c-ares", version = "1.16.1")
bazel_dep(name = "protobuf", version = "26.0")
bazel_dep(name = "fmt", version = "8.1.1")
bazel_dep(name = "zlib", version = "1.2.13")
bazel_dep(name = "liburing", version = "2.5")
bazel_dep(name = "rapidjson", version = "1.1.0")
bazel_dep(name = "re2", version = "2021-09-01")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "rules_proto", version = "4.0.0")

http_archive(
    name = "nettle",
    build_file = "@//thirdparty:nettle.BUILD",
    sha256 = "ccfeff981b0ca71bbd6fbcb054f407c60ffb644389a5be80d6716d5b550c6ce3",
    strip_prefix = "nettle-3.9.1",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/nettle-3.9.1.tar.gz",
)

http_archive(
    name = "gmp",
    build_file = "@//thirdparty:gmp.BUILD",
    sha256 = "fd4829912cddd12f84181c3451cc752be224643e87fac497b69edddadc49b4f2",
    strip_prefix = "gmp-6.2.1",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/gmp-6.2.1.tar.xz",
)

http_archive(
    name = "gnutls",
    build_file = "@//thirdparty:gnutls.BUILD",
    sha256 = "f74fc5954b27d4ec6dfbb11dea987888b5b124289a3703afcada0ee520f4173e",
    strip_prefix = "gnutls-3.8.3",
    url = "https://vectorized-public.s3.us-west-2.amazonaws.com/dependencies/gnutls-3.8.3.tar.xz",
)

http_archive(
    name = "numactl",
    build_file = "@//thirdparty:numactl.BUILD",
    sha256 = "1ee27abd07ff6ba140aaf9bc6379b37825e54496e01d6f7343330cf1a4487035",
    strip_prefix = "numactl-2.0.14",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/numactl-v2.0.14.tar.gz",
)

http_archive(
    name = "libpciaccess",
    build_file = "@//thirdparty:libpciaccess.BUILD",
    sha256 = "9938b18509553452c6e13f79e16cbaffec9ea67119aa2de5d75e83c4f67ff400",
    strip_prefix = "libpciaccess-libpciaccess-0.16",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/libpciaccess-0.16.tar.bz2",
)

http_archive(
    name = "hwloc",
    build_file = "@//thirdparty:hwloc.BUILD",
    sha256 = "1f6d0f3edddd0070717f9f17e3a090a26d203e026c192144aa5f587725cf11e3",
    strip_prefix = "hwloc-hwloc-2.9.3",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/hwloc-2.9.3.tar.gz",
)

http_archive(
    name = "krb5",
    build_file = "@//thirdparty:krb5.BUILD",
    sha256 = "ec3861c3bec29aa8da9281953c680edfdab1754d1b1db8761c1d824e4b25496a",
    strip_prefix = "krb5-krb5-1.20.1-final",
    url = "https://vectorized-public.s3.us-west-2.amazonaws.com/dependencies/krb5-krb5-1.20.1-final.tar.gz",
)

http_archive(
    name = "xz",
    build_file = "@//thirdparty:xz.BUILD",
    sha256 = "0d2b89629f13dd1a0602810529327195eff5f62a0142ccd65b903bc16a4ac78a",
    strip_prefix = "xz-5.2.5",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/xz-v5.2.5.tar.gz",
)

http_archive(
    name = "xml2",
    build_file = "@//thirdparty:xml2.BUILD",
    sha256 = "ed0c91c5845008f1936739e4eee2035531c1c94742c6541f44ee66d885948d45",
    strip_prefix = "libxml2-2.10.4",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/libxml2-2.10.4.tar.xz",
)

http_archive(
    name = "cryptopp",
    build_file = "@//thirdparty:cryptopp.BUILD",
    sha256 = "11a6dbc749c27687ddf13195950589596f51361210a1f67e3c383cc4961f3e61",
    strip_prefix = "cryptopp-CRYPTOPP_8_7_0",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/CRYPTOPP_8_7_0.tar.xz",
)

http_archive(
    name = "base64",
    build_file = "@//thirdparty:base64.BUILD",
    sha256 = "b21be58a90d31302ba86056db7ef77a481393b9359c505be5337d7d54e8a0559",
    strip_prefix = "base64-0.5.0",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/base64-v0.5.0.tar.gz",
)

http_archive(
    name = "ada",
    build_file = "@//thirdparty:ada.BUILD",
    sha256 = "8e222d536d237269488f7d454544eedf12847f47b3d42651e8c9963c3fb0cf5e",
    strip_prefix = "ada-2.7.3",
    url = "https://vectorized-public.s3.us-west-2.amazonaws.com/dependencies/ada-2.7.3.tar.gz",
)

http_archive(
    name = "openssl",
    build_file = "@//thirdparty:openssl.BUILD",
    sha256 = "eb1ab04781474360f77c318ab89d8c5a03abc38e63d65a603cabbf1b00a1dc90",
    strip_prefix = "openssl-3.0.9",
    url = "https://vectorized-public.s3.us-west-2.amazonaws.com/dependencies/openssl-3.0.9.tar.gz",
)

http_archive(
    name = "avro",
    build_file = "@//thirdparty:avro.BUILD",
    sha256 = "d4043000885812223c7a8a444781f9ded46aca4dc6216d86bbde18fd94c1562a",
    strip_prefix = "avro-836cb1004090435a985becda1daa619c407e1376",
    url = "https://github.com/redpanda-data/avro/archive/836cb1004090435a985becda1daa619c407e1376.tar.gz",
)

http_archive(
    name = "boost",
    build_file = "@//thirdparty:boost.BUILD",
    sha256 = "b62bd839ea6c28265af9a1f68393eda37fab3611425d3b28882d8e424535ec9d",
    strip_prefix = "boost-1.82.0",
    url = "https://github.com/boostorg/boost/releases/download/boost-1.82.0/boost-1.82.0.tar.gz", 
)

http_archive(
    name = "unordered_dense",
    build_file = "@//thirdparty:unordered_dense.BUILD",
    sha256 = "98c9d02ff8761d50a2cb6ebd53f78f7d311f6980aef509efdcdaa5f3868ca06c",
    strip_prefix = "unordered_dense-9338f301522a965309ecec58ce61f54a52fb5c22",
    url = "https://github.com/redpanda-data/unordered_dense/archive/9338f301522a965309ecec58ce61f54a52fb5c22.tar.gz",
)

http_archive(
    name = "snappy",
    build_file = "@//thirdparty:snappy.BUILD",
    sha256 = "774c337a545d6b818163c12455627ba61ed8d2daa9a9236b3aa88c64f081560e",
    strip_prefix = "snappy-ca541bd6c80d97cf93d1a33e613521947701ea53",
    url = "https://github.com/redpanda-data/snappy/archive/ca541bd6c80d97cf93d1a33e613521947701ea53.tar.gz",
)

http_archive(
    name = "lksctp",
    build_file = "@//thirdparty:lksctp.BUILD",
    sha256 = "0c8fac0a5c66eea339dce6be857101b308ce1064c838b81125b0dde3901e8032",
    strip_prefix = "lksctp-tools-lksctp-tools-1.0.19",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/lksctp-tools-1.0.19.tar.gz",
)

http_archive(
    name = "roaring",
    build_file = "@//thirdparty:roaring.BUILD",
    sha256 = "78487658b774f27546e79de2ddd37fca56679b23f256425d2c86aabf7d1b8066",
    strip_prefix = "CRoaring-c433d1c70c10fb2e40f049e019e2abbcafa6e69d",
    url = "https://github.com/redpanda-data/CRoaring/archive/c433d1c70c10fb2e40f049e019e2abbcafa6e69d.tar.gz",
)

http_archive(
    name = "wasmtime",
    build_file = "@//thirdparty:wasmtime.BUILD",
    sha256 = "a7f989b170d109696b928b4b3d1ec1d930064af7df47178e1341bd96e5c34465",
    strip_prefix = "wasmtime-9e1084ffac08b1bf9c82de40c0efc1baff14b9ad",
    url = "https://github.com/bytecodealliance/wasmtime/archive/9e1084ffac08b1bf9c82de40c0efc1baff14b9ad.tar.gz",
)

http_archive(
    name = "seastar",
    build_file = "@//thirdparty:seastar.BUILD",
    sha256 = "166ac9f38ac5f7e900d8f9c892afaaa7c8d9909b0dd4b6315bcb335f50ddf728",
    strip_prefix = "seastar-16a722bc0a8792daa20c165dabc07e4b1e5dff26",
    url = "https://github.com/redpanda-data/seastar/archive/16a722bc0a8792daa20c165dabc07e4b1e5dff26.tar.gz",
)

http_archive(
    name = "hdrhistogram",
    build_file = "@//thirdparty:hdrhistogram.BUILD",
    sha256 = "f81a192b62ae25bcebe63c9f3c74f371d04f88a74c1867532ec8a0012a9e482c",
    strip_prefix = "HdrHistogram_c-0.11.5",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/HdrHistogram_c-0.11.5.tar.gz",
)
