cloud_storage = library('cloud_storage', [
    'cache_service.cc',
    'cache_probe.cc',
    'topic_manifest.cc',
    'partition_manifest.cc',
    'recursive_directory_walker.cc',
    'remote.cc',
    'offset_translation_layer.cc',
    'probe.cc',
    'partition_probe.cc',
    'partition_recovery_manager.cc',
    'types.cc',
    'remote_segment.cc',
    'remote_partition.cc',
    'remote_segment_index.cc'],
  dependencies : [seastar, config, xxhash, hdrhist, roaring, absl, hashing],
  cpp_args : '-DXXH_PRIVATE_API',
  link_with : [bytes, model, s3, utils, http],
  implicit_include_directories : false,
  include_directories: include_dirs)
