v_cc_library(
  NAME
    compression
  SRCS
    "compression.cc"
    "stream_zstd.cc"
    "async_stream_zstd.cc"
    "snappy_standard_compressor.cc"
    "lz4_decompression_buffers.cc"
    "internal/snappy_java_compressor.cc"
    "internal/lz4_frame_compressor.cc"
    "internal/gzip_compressor.cc"
  DEPS
    v::bytes
    v::ssx
    zstd::libzstd_static
    lz4::lz4
    Snappy::snappy
    ZLIB::ZLIB
  DEFINES
    -DZSTD_STATIC_LINKING_ONLY
)

add_subdirectory(tests)
